# factur-x

./: .env.example  .gitignore  .gitleaks.toml  HTTPS_SETUP.md  Makefile  README.md  Untitled-1  commitlint.config.js  facturx_express_prompt.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  docker-build.yml  security.yml
.husky/: commit-msg  pre-commit
.serena/: project.yml
.serena/memories/: code_style.md  codebase_structure.md  entry_points.md  project_overview.md  suggested_commands.md  tech_stack.md
.trae/documents/: BUSINESS_DATA_EXPLANATION.md  DEMO_BUSINESS_DATA.md  PROJECT_STATUS.md
apps/: .gitkeep
apps/facturx-api/: Dockerfile  main.py  pyproject.toml  pytest.ini
apps/facturx-api/app/: __init__.py  main.py
apps/facturx-api/app/core/: __init__.py  config.py  database.py  exceptions.py  logging.py
apps/facturx-api/app/models/: business.py  invoice.py
apps/facturx-api/app/routers/: __init__.py  invoices.py
apps/facturx-api/app/services/: facturx_service.py  invoice_service.py  pdf_generator.py  validation_service.py  xml_generator.py
apps/facturx-api/app/utils/: __init__.py  exceptions.py  logging_config.py
apps/facturx-api/tests/: test_facturx_service.py  test_invoice_service.py  test_pdf_generator.py  test_validation_service.py  test_xml_generator.py
docs/: .gitkeep  README.md
infra/: .gitkeep
memory/: .gitkeep
scripts/: setup-ssl.sh  switch-to-https.sh
(+35 files in other folders)
