[project]
name = "facturx-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "factur-x>=3.8",
    "fastapi>=0.116.1",
    "lxml>=6.0.1",
    "pydantic>=2.11.7",
    "pypdf>=6.0.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.3",
    "uvicorn[standard]>=0.35.0",
]
