[project]
name = "facturx-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "factur-x>=3.8",
    "fastapi>=0.116.1",
    "lxml>=6.0.1",
    "pydantic>=2.11.7",
    "pypdf>=6.0.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.3",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "safety>=3.0.0",
    "bandit>=1.7.0",
    "pip-licenses>=4.0.0",
]
